uploaded about page with semantic HTML

--- a/index.html
+++ b/index.html
@@ -4,11 +4,77 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Introduction| Smalawad</title>
+    <meta property="og: title" content="Home | Smalawad">
+    <meta property="og:url" content="#">
+    <meta property="og:type" content="website">
+    <meta property="description" content="frontend developer">
+
 </head>
 
 <body>
+    <nav class="navigation">
+        <h1> Frontend developer</h1>
+        <!-- <div class="brand"> Frontend developer</div> -->
+        <ul class="nav-pills">
+            <li class="list-item-inline">
+                <a class="link link-active" href="/">Home</a>
+            </li>
+            <li class="list-item-inline">
+                <a class="link" href="/">About</a>
+            </li>
+            <li class="list-item-inline">
+                <a class="link" href="/">Projects</a>
+            </li>
+            <li class="list-item-inline">
+                <a class="link" href="/">Blogs</a>
+            </li>
+            <li class="list-item-inline">
+                <a class="link" href="/">Contact</a>
+            </li>
+        </ul>
+    </nav>
 
+    <header class="hero">
+        <!-- <img class="hero-img" src="images/web.jpg"> -->
+        <h1 class="hero-heading">Smalawad the <span class="heading-inverted">Frontend developer</span></h1>
+    </header>
+
+    <section class="section">
+        <div class="container-center">
+            <h1> About Smalawad</h1>
+            <p class="format"> I am a software developer specialised in
+                <strong>frontend development</strong> based in <strong> Bangalore, India.</strong>
+                I create beautiful websites your users will love. I work with you from start to finish,
+                make sure your goals are reached and your users are happy.<br><br>
+
+            </p>
+        </div>
+    </section>
+    <section class="section">
+        <div class="container-center">
+            <h1> Technologies</h1>
+            <p>I'm familiar with HTML, CSS, Git, JavaScript, Bootstrap, jQuery, ReactJs and Web hosting</p>
+        </div>
+
+    </section>
+    <br>
+
+    <footer class="footer">
+        <div class="footer-header"> <strong>Social media presence</strong></div>
+        <ul class="social-links ">
+            <li class="list-item-inline">
+                <a class="link" href="https://github.com/smalawad">github</a>
+            </li>
+            <li class="list-item-inline">
+                <a class="link" href="https://www.linkedin.com/in/smalawad">linkedin</a>
+            </li>
+            <li class="list-item-inline">
+                <a class="link" href="https://twitter.com/smalawad">twitter</a>
+            </li>
+
+        </ul>
+    </footer>
 </body>
 
 </html>
